--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ figs/.DS_Store
 output/.DS_Store
 .Rproj.user
 .RData
+
+
+# Office Temporal Files
+*.tmp
+# Word temporary
+~$*.doc*
+# Word Auto Backup File
+Backup of *.doc*
+# Excel temporary
+~$*.xls*
+# Excel Backup File
+*.xlk
+# PowerPoint temporary
+~$*.ppt*
+# Visio autosave temporary files
+*.~vsd*
